fix activity overflow

--- a/frontend/src/styles/Activity.scss
+++ b/frontend/src/styles/Activity.scss
@@ -1,7 +1,7 @@
 .activity-page {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 50vh auto;
+    grid-template-rows: auto auto;
     gap: 5vh;
 }
 
